OS and Browser Checker 0.0.0.1

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,16 @@
 /*============================================================*/
 /*============================================================*/
-/*               ========== CV As A Project ==========        */
-/*               ===== Author: Aleksey Nikolaev ======        */
+/*             ===== Author: Aleksey Nikolaev ======          */
 /*============================================================*/
 /*============================================================*/
 
 *, ::after, ::before {
+	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
 }
 
-::selection {
-	color: white;
-	background: #1d2024;
-}
-
 html {
-	-webkit-font-smoothing: antialiased;
-	scroll-behavior: smooth;
 	font-family: "Atkinson Hyperlegible Regular", Arial, Helvetica, sans-serif;
 	background: rgba(6, 21, 33, 0.85);
 }
@@ -26,877 +20,26 @@ body {
 	margin: 0;
 	opacity: 0;
 	transition: opacity 1s ease-in;
-	transition-delay: 0.5s;
+	transition-delay: 0.25s;
 }
 
-.parallax {
-	position: relative;
-	display: flex;
-	height: 50vh;
-	background-size: cover;
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	justify-content: center;
-	align-items: center;
-	user-select: none;
-}
-
-.parallax:before {
+#container {
 	position: absolute;
-	content: '';
-	background: rgba(0, 0, 0, 0.6);
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
-/*============================================================*/
-/*========== TOOLTIP                                          */
-/*============================================================*/
-
-.tooltip .tooltip_text::after {
-	content: "";
-	position: absolute;
-	top: 25%;
-	left: 100%;
-	margin-top: 2px;
-	border-width: 8px;
-	border-style: solid;
-	border-color: transparent transparent transparent rgba(255, 255, 255, 0.1);
-}
-
-.tooltip {
-	position: relative;
-	display: inline-block;
-}
-
-.tooltip .tooltip_text {
-	position: absolute;
+	background-color: #ffffff;
 	top: 50%;
-	transform: translateY(-95%);
-	right: 120%;
-	width: 130px;
-	background-color: rgba(255, 255, 255, 0.1);
-	color: rgba(255, 255, 255, 0.80);
-	letter-spacing: 1px;
-	text-align: center;
-	padding: 4px 0;
-	border-radius: 4px;
-	opacity: 0;
-	transition: ease-in-out 0.4s;
-	transition-delay: 0.2s;
-}
-
-.tooltip:hover .tooltip_text {
-	opacity: 1;
-}
-
-/*============================================================*/
-/*========== TOP AREA                                         */
-/*============================================================*/
-
-.top-area {
-	position: relative;
-	display: flex;
-	height: 100vh;
-	background-size: cover;
-	background-attachment: fixed;
-	justify-content: center;
-	align-items: center;
-	user-select: none;
-	z-index: -1;
-}
-
-.top-area:before {
-	position: absolute;
-	content: '';
-	background: rgba(0, 0, 0, 0.6);
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
-.top-area .introduce_block {
-	width: 1100px;
-	text-align: center;
-	z-index: 1;
-}
-
-.top-area .introduce_block h1 {
-	color: rgba(255, 255, 255, 0.90);
-	font-size: 90px;
-	font-weight: lighter;
-	margin: 0 0 36px 0;
-}
-
-.top-area .introduce_block p {
-	width: 100%;
-	color: rgba(255, 255, 255, 0.90);
-	font-size: 2.5rem;
-	letter-spacing: 4px;
-	line-height: 3.5rem;
-	margin: auto;
-}
-
-/*============================================================*/
-/*========== NAVIGATION CONTAINER                             */
-/*============================================================*/
-.nav_container {
-	position: relative;
-	display: flex;
-	height: 100%;
-	margin: auto;
-	width: 1100px;
-}
-
-/*============================================================*/
-/*========== NAVIGATION                                       */
-/*============================================================*/
-
-.navigation {
-	position: sticky;
-	display: block;
-	top: 0;
-	width: 100%;
-	height: 60px;
-	background: #1d2024;
-	user-select: none;
-	z-index: 1000;
-}
-
-.navigation .logo {
-	border-right: 4px solid rgba(255, 0, 0, 0.1);
-	display: flex;
-	height: 100%;
-	width: 150px;
-	opacity: 0.8;
-	transition: ease-in-out 0.25s;
-}
-
-.navigation .logo a {
-	position: relative;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.navigation .logo:hover {
-	background: #292d33;
-	opacity: 1;
-}
-
-.navigation .menu_section {
-	display: flex;
-	flex-grow: 1;
-}
-
-.navigation .menu_section .menu{
-	display: flex;
-	list-style: none;
-	margin: auto 8px auto 8px;
-	padding: 0;
-}
-
-.navigation .menu_section .menu li{
-	padding-right: 20px;
-	padding-left: 20px;
-	transition: ease-in-out 0.25s;
-}
-
-.navigation .menu_section a {
-	text-decoration: none;
-	color: rgba(255, 255, 255, 0.80);
-	font-size: 1.5rem;
-	letter-spacing: 1px;
-	white-space: nowrap;
-	transition: color 0.25s;
-}
-
-.navigation .menu_section li:hover {
-	transform: scale(1.2);
-}
-
-.navigation .menu_section a:hover {
-	color: white;
-}
-
-/*============================================================*/
-/*========== CONTAINER LABEL                                  */
-/*============================================================*/
-
-.container_label {
-	position: absolute;
-	height: 100px;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	user-select: none;
-}
-
-.container_label .container_label_left {
-	height: 4px;
-	width: 100px;
-	transform: translateY(25%);
-	background: rgba(255, 0, 0, 0.1);
-}
-
-.container_label .container_label_center {
-	height: 100px;
-	margin-left: 20px;
-	margin-right: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.container_label .container_label_center p{
-	color: rgba(255, 255, 255, 0.80);
-	font-size: 40px;
-	letter-spacing: 4px;
-	white-space: nowrap;
-}
-
-
-.container_label .container_label_right {
-	height: 4px;
-	width: 100px;
-	transform: translateY(25%);
-	background: rgb(255, 0, 0, 0.1);
-}
-
-/*============================================================*/
-/*========== ABOUT ME                                         */
-/*============================================================*/
-
-.about_me {
-	background: #31383d;
-	height: 700px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 10;
-}
-
-.about_me .container_label {
-	top: 60px;
-}
-
-.about_me .about_me_container {
-	position: absolute;
-	display: flex;
-	height: 60%;
-	width: 100%;
-	bottom: 50px;
-	align-items: center;
-	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
-}
-
-.about_me .about_me_description {
-	position: relative;
-	display: flex;
-	height: 100%;
-	width: 680px;
-	margin-left: 36px;
-}
-
-.about_me .about_me_description p {
-	margin: auto;
-	text-decoration: none;
-	color: rgba(255, 255, 255, 0.80);
-	line-height: 2.2rem;
-	font-size: 1.5rem;
-	letter-spacing: 2px;
-}
-
-.about_me .about_me_description .about_me_caption {
-	display: block;
-	margin-bottom: 8px;
-	font-size: 1.8rem;
-	font-weight: bold;
-	letter-spacing: 4px;
-	text-shadow: 4px 4px 8px rgba(255, 0, 0, 0.05);
-}
-
-.about_me .avatar_container {
-	position: relative;
-	height: 78%;
-	width: 290px;
-	margin: auto;
-	overflow: hidden;
-	box-shadow:
-			20px 20px 0 0 #31383d,
-			30px -30px 0 0 #31383d,
-			-30px 30px 0 0 #31383d,
-			30px 30px 0 0 rgba(255, 0, 0, 0.1),
-			-20px -20px 0 0 #31383d,
-			-30px 30px 0 0 #31383d,
-			30px -30px 0 0 #31383d,
-			-30px -30px 0 0 rgba(255, 0, 0, 0.1);
-}
-
-.about_me .avatar_container img {
-	opacity: 0.8;
-	height: 100%;
-	object-fit: cover;
-	transform: scale(1.3) translate(-20px, 20px);
-	transition: ease-in-out 0.25s;
-}
-
-.about_me .avatar_container:hover img {
-	transform: scale(1.32) translate(-21px, 22px);
-}
-
-/*============================================================*/
-/*========== PROJECTS                                         */
-/*============================================================*/
-
-.projects {
-	background: #394248;
-	height:1450px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 20;
-}
-
-.projects .container_label {
-	top: 60px;
-}
-
-.projects .projects_zone {
-	position: absolute;
-	width: 100%;
-	top: 220px;
-	bottom: 50px;
-	display: grid;
-	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
-}
-
-.projects .project_container {
-	position: relative;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	align-items: center;
-}
-
-.projects .project_container .project_image_check {
-	display: none;
-}
-
-.projects .project_container label {
-	position: relative;
-	width: 60%;
-	margin: 0 18px 0 36px;
-	z-index: 21;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.20);
-	transition:
-			translate 0.5s cubic-bezier(.5,0,.5,1),
-			scale 0.75s cubic-bezier(.5,0,.5,1),
-			box-shadow 1.25s,
-			z-index 1.25s;
-}
-
-.projects .project_container .project_image_check:checked + label {
-	scale: 3;
-	translate: 86%;
-	z-index: 100;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.50);
-}
-
-.projects .project_container img {
-	width: 100%;
-	cursor: pointer;
-	margin-bottom: -5px;
-}
-
-.projects .project_container .project_description {
-	position: relative;
-	display: flex;
-	height: 100%;
-	width: 100%;
-	margin: 0 24px 0 18px;
-}
-
-.projects .project_caption {
-	display: block;
-	margin-bottom: 8px;
-	font-size: 1.8rem;
-	font-weight: bold;
-	letter-spacing: 4px;
-	text-shadow: 4px 4px 8px rgba(255, 0, 0, 0.05);
-}
-
-.projects .project_container p {
-	margin: auto;
-	text-decoration: none;
-	color: rgba(255, 255, 255, 0.80);
-	line-height: 2rem;
-	font-size: 1.5rem;
-}
-
-/*============================================================*/
-/*========== SKILLS                                           */
-/*============================================================*/
-
-.skills {
-	background: #31383d;
-	height: 1080px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 30;
-}
-
-.skills .container_label {
-	top: 60px;
-}
-
-.skills .skills_container {
-	position: absolute;
-	top: 220px;
 	left: 50%;
-	transform: translateX(-50%);
-	bottom: 50px;
-	width: 150%;
-	display: flex;
-	justify-content: center;
-	flex-flow: row wrap;
-}
-
-.skills .skill {
-	position: relative;
-	height: 150px;
-	width: 150px;
-	margin: 0 86px 0 86px;
-}
-
-.skills .card {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
-	transition: all 0.2s ease-in-out;
-}
-
-.skills .card .card_top {
-	background: #31383d;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	user-select: none;
-}
-
-.skills .card .card_top .image_card_top {
-	position: absolute;
-	opacity: 0.2;
-	height: 100%;
-	transition: opacity 0.4s;
-}
-
-.skills .card .card_bottom {
-	position: absolute;
-	width: 200%;
-	top: 0;
-	opacity: 0;
-	transform: scale(0);
-	transition: all 0.2s;
-}
-
-.skills .card .card_bottom .skill_caption {
-	display: block;
+	transform: translate(-50%, -50%);
+	width: 90vw;
+	max-width: 600px;
+	padding: 40px 24px;
+	border-radius: 8px;
+	font-size: 3rem;
+	line-height: 6rem;
+	color: #051a32;
 	text-align: center;
-	margin-bottom: 8px;
-	color: rgba(255, 255, 255, 0.80);
-	letter-spacing: 2px;
-	font-size: 1.5rem;
+	box-shadow: 0 20px 50px rgba(5, 26, 50, 0.18);
 }
 
-.skills .card .card_bottom p {
-	margin-top: 1rem;
-	color: rgba(255, 255, 255, 0.80);
-	line-height: 2rem;
-	font-size: 1.5rem;
-}
-
-.skills .card .card_top .image_card_top:hover,
-.skills .card .card_bottom:hover ~ .card_top .image_card_top {
-	opacity: 0.75;
-}
-
-.skills .card:hover {
-	transform-origin: bottom;
-	transform: rotateX(10deg);
-	box-shadow: 0 -15px 15px 0 rgba(29, 32, 36, 0.15);
-}
-
-.skills .card:hover > .card_bottom,
-.skills .card .card_bottom:hover {
-	opacity: 1;
-	top: 100%;
-	transform: scale(1);
-}
-
-@media only screen and (max-width: 1600px) {
-	
-	.skills .skills_container {
-		justify-content: space-around;
-		flex-flow: row wrap;
-		width: 100%;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-	
-	.skills .card .card_bottom {
-		display: none;
-	}
-	
-	.skills .card:hover {
-		box-shadow: 0 -15px 15px 0 rgba(29, 32, 36, 0.15),
-					0 4px 0 rgba(255, 0, 0, 0.1);
-	}
-}
-
-/*============================================================*/
-/*========== MIDDLE AREAS                                     */
-/*============================================================*/
-
-.middle-area_one .continues_block,
-.middle-area_two .continues_block {
-	/*border: 1px solid #ff0000;*/
-	width: 90%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	z-index: 1;
-}
-
-.middle-area_one h1,
-.middle-area_two h1 {
-	font-size: 2.5rem;
-	font-weight: bold;
-	letter-spacing: 4px;
-	color: rgba(255, 255, 255, 0.90);
-}
-
-.middle-area_one p,
-.middle-area_two p {
-	color: rgba(255, 255, 255, 0.90);
-	line-height: 1.8rem;
-	font-size: 1.8rem;
-}
-
-.middle-area_one img,
-.middle-area_two img {
-	opacity: 0.8;
-	width: 150px;
-	margin-bottom: 12px;
-}
-
-/*============================================================*/
-/*==========  EXPERIENCE                                      */
-/*============================================================*/
-
-.experience {
-	background: #394248;
-	height:1150px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 40;
-}
-
-.experience .container_label {
-	top: 60px;
-}
-
-.experience .experience_container {
-	position: absolute;
-	width: 100%;
-	top: 220px;
-	bottom: 50px;
-	display: flex;
-	flex-flow: column;
-	justify-content: space-between;
-}
-
-.experience .experience_block {
-	position: relative;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
-}
-
-.experience .experience_description {
-	position: relative;
-	margin: 16px;
-}
-
-.experience .experience_description .caption {
-	display: block;
-	margin-bottom: 8px;
-	font-size: 1.8rem;
-	font-weight: bold;
-	letter-spacing: 4px;
-	text-shadow: 4px 4px 8px rgba(255, 0, 0, 0.05);
-}
-
-.experience .experience_description p {
-	margin: 16px;
-	color: rgba(255, 255, 255, 0.80);
-	line-height: 1.8rem;
-	font-size: 1.4rem;
-}
-
-.experience .experience_logos {
-	position: relative;
-	right: 0;
-	width: 150px;
-	display: flex;
-	flex-flow: column;
-	justify-content: space-around;
-	align-items: center;
-	margin: 16px;
-}
-
-.experience .experience_logos img {
-	width: 100px;
-	opacity: 0.2;
-}
-
-/*============================================================*/
-/*==========  EDUCATION                                       */
-/*============================================================*/
-
-.education {
-	background: #31383d;
-	height: 1200px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 50;
-}
-
-.education .container_label {
-	top: 60px;
-}
-
-.education .education_container {
-	position: absolute;
-	width: 100%;
-	top: 220px;
-	bottom: 50px;
-	display: flex;
-	flex-direction: column;
-	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
-}
-
-.education .edu_description {
-	position: relative;
-	margin: 32px;
-}
-
-.education .edu_description .caption {
-	display: block;
-	margin-bottom: 8px;
-	font-size: 1.8rem;
-	font-weight: bold;
-	letter-spacing: 4px;
-	text-shadow: 4px 4px 8px rgba(255, 0, 0, 0.05);
-}
-
-.education .edu_description a {
-	text-decoration: none;
-	color: rgba(183, 208, 255, 0.8);
-	transition: all 0.2s;
-}
-
-.education .edu_description a:hover {
-	color: rgba(83, 142, 255, 0.8);
-	text-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-}
-
-.education .edu_description p {
-	margin: 0;
-	color: rgba(255, 255, 255, 0.80);
-	font-size: 1.4rem;
-}
-
-/*============================================================*/
-/*========== HOBBY                                            */
-/*============================================================*/
-
-.hobby {
-	background: #394248;
-	height:700px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 60;
-}
-
-.hobby .container_label {
-	top: 60px;
-}
-
-.hobby .hobby_container {
-	position: absolute;
-	top: 180px;
-	width: 100%;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
-}
-
-.hobby .card {
-	position: relative;
-	width: 200px;
-	height: 200px;
-	margin: 36px;
-	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
-}
-
-.hobby .card .card_top {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #31383d;
-}
-
-.hobby .card .card_top .image_card_top {
-	position: relative;
-	opacity: 0.8;
-	width: 40%;
-}
-
-.hobby .card .card_bottom {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	background: rgba(227, 239, 255, 0.8);
-	box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-	transition: ease-in-out top 0.5s, ease-out box-shadow 0.75s;
-}
-
-.hobby .card .card_bottom p {
-	position: relative;
-	margin: 16px;
-}
-
-.hobby .card:hover .card_bottom {
-	top: 100%;
-	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
-}
-
-/*============================================================*/
-/*========== BOTTOM AREA                                      */
-/*============================================================*/
-
-.parallax.bottom-area:before {
-	background: rgba(0, 0, 0, 0.2);
-}
-/*============================================================*/
-/*==========  CONTACTS                                        */
-/*============================================================*/
-
-.contacts {
-	background: #31383d;
-	height: 500px;
-	width: 100%;
-	scroll-margin-top: 55px;
-	z-index: 70;
-}
-
-.contacts .container_label {
-	top: 50px;
-}
-
-.contacts .contacts_zone {
-	position: absolute;
-	height: 100px;
-	width: 100%;
-	top: 35%;
-	display: flex;
-	justify-content: center;
-}
-
-.contacts .contacts_zone a {
-	text-decoration: none;
-	margin: 0 32px 0 32px;
-	background: rgba(29, 32, 36, 0.18);
-	box-shadow: 0 5px 10px 0 rgba(29, 32, 36, 0.10);
-	transition: ease-in-out 0.2s;
-}
-
-.contacts .contacts_zone img {
-	opacity: 0.2;
-	width: 80px;
-	margin: 10px;
-	transition: ease-in-out 0.2s;
-}
-
-.contacts .contacts_zone a:hover img{
-	opacity: 0.7;
-	background: rgba(43, 48, 54, 0.18);
-}
-
-.contacts .contacts_zone a:hover {
-	background: rgba(29, 32, 36, 0.5);
-	transform-origin: bottom;
-	transform: rotateX(10deg);
-	box-shadow: 0 -15px 15px 0 rgba(29, 32, 36, 0.15);
-}
-
-.contacts .links_zone {
-	position: absolute;
-	height: 40px;
-	width: 100%;
-	top: 72%;
-	display: flex;
-	justify-content: center;
-}
-
-.contacts .links_zone a {
-	color: white;
-	margin: 0 24px 0 24px;
-	opacity: 0.4;
-	display: flex;
-	flex-direction: column;
-	text-decoration: none;
-	transition: ease-in-out 0.2s;
-}
-
-.contacts .links_zone img {
-	height: 100%;
-}
-
-.contacts .links_zone a:hover {
-	opacity: 0.7;
-}
-
-.contacts .copyright {
-	position: absolute;
-	height: 30px;
-	width: 100%;
-	bottom: 8px;
-	display: flex;
-	justify-content: center;
-}
-
-.contacts .copyright p {
-	position: absolute;
-	margin: 0;
-	bottom: 0;
-	color: rgba(255, 255, 255, 0.8);
+#container span {
+	color: #4B5969;
 }
