--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,24 +22,47 @@ body {
 	opacity: 0;
 	transition: opacity 1s ease-in;
 	transition-delay: 0.25s;
+	
+	color: #333;
+	width: 550px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 90vh;
+	background: #A8DCF0;
 }
 
-#container {
-	position: absolute;
-	background-color: #ffffff;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 90vw;
-	max-width: 600px;
-	padding: 40px 24px;
-	border-radius: 8px;
-	line-height: 6rem;
-	color: #051a32;
-	text-align: center;
-	box-shadow: 0 20px 50px rgba(5, 26, 50, 0.18);
+h1 {
+	font-size: 1rem;
+	text-transform: uppercase;
 }
 
-#container span {
-	color: #4B5969;
+.counter-preview {
+	font-size: 1rem;
+	font-weight: bold;
+	color: #333;
+}
+
+button {
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 4px;
+	font-size: 18px;
+	cursor: pointer;
+	margin-top: 20px;
+	margin-left: 1rem;
+}
+
+.decrement {
+	background-color: #4CAF50;
+}
+
+.reset {
+	background-color: #F44336;
+}
+
+.increment {
+	background-color: #2196F3;
 }
