--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@
 
 html {
 	font-family: "Atkinson Hyperlegible Regular", Arial, Helvetica, sans-serif;
-	font-size: 3rem;
+	font-size: 2em;
 	background: rgba(6, 21, 33, 0.85);
 }
 
@@ -23,46 +23,35 @@ body {
 	transition: opacity 1s ease-in;
 	transition-delay: 0.25s;
 	
-	color: #333;
-	width: 550px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: 90vh;
-	background: #A8DCF0;
+	min-height: 40vh;
 }
 
-h1 {
-	font-size: 1rem;
+h2 {
 	text-transform: uppercase;
-}
-
-.counter-preview {
-	font-size: 1rem;
-	font-weight: bold;
-	color: #333;
 }
 
 button {
 	color: #fff;
 	border: none;
 	padding: 10px 20px;
-	border-radius: 4px;
+	border-radius: 8px;
 	font-size: 18px;
 	cursor: pointer;
-	margin-top: 20px;
-	margin-left: 1rem;
+	margin: 12px;
 }
 
-.decrement {
-	background-color: #4CAF50;
+#decrement {
+	background-color: #265429;
 }
 
-.reset {
-	background-color: #F44336;
+#reset {
+	background-color: #88261f;
 }
 
-.increment {
-	background-color: #2196F3;
+#increment {
+	background-color: #16588d;
 }
