--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,47 +11,78 @@
 }
 
 html {
-	font-family: "Atkinson Hyperlegible Regular", Arial, Helvetica, sans-serif;
 	font-size: 2em;
 	background: rgba(6, 21, 33, 0.85);
 }
 
-body {
-	padding: 0;
-	margin: 0;
+div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 0;
+	width: 0;
+	border-radius: 50%;
 	opacity: 0;
-	transition: opacity 1s ease-in;
-	transition-delay: 0.25s;
-	
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	min-height: 40vh;
+	border: 4px solid #686FFD;
+	animation: rings 4s infinite ease-in;
 }
 
-h2 {
-	text-transform: uppercase;
+@keyframes rings {
+	0% {
+		opacity: 0.1;
+		height: 0;
+		width: 0;
+	}
+	20% {
+		opacity: 0.5;
+	}
+	50% {
+		opacity: 0.1;
+	}
+	100% {
+		opacity: 0;
+		height: 50vmin;
+		width: 50vmin;
+	}
 }
 
-button {
-	color: #fff;
-	border: none;
-	padding: 10px 20px;
-	border-radius: 8px;
-	font-size: 18px;
-	cursor: pointer;
-	margin: 12px;
+div:nth-child(1) {
+	animation-delay: 200ms;
 }
 
-#decrement {
-	background-color: #265429;
+div:nth-child(2) {
+	animation-delay: 400ms;
 }
 
-#reset {
-	background-color: #88261f;
+div:nth-child(3) {
+	animation-delay: 600ms;
 }
 
-#increment {
-	background-color: #16588d;
+div:nth-child(4) {
+	animation-delay: 800ms;
+}
+
+div:nth-child(5) {
+	animation-delay: 1000ms;
+}
+
+div:nth-child(6) {
+	animation-delay: 1200ms;
+}
+
+div:nth-child(7) {
+	animation-delay: 1400ms;
+}
+
+div:nth-child(8) {
+	animation-delay: 1600ms;
+}
+
+div:nth-child(9) {
+	animation-delay: 1800ms;
+}
+
+div:nth-child(10) {
+	animation-delay: 2000ms;
 }
